[package]
name = "gpio_manager"
version = "1.1.5"
edition = "2021"
include = ["src/**/*.rs", "Cargo.toml", "Cargo.lock", "README.md", "gpio_manager.pyi"]
authors = ["Rylan Meilutis <rylan.meilutis@gmail.com>"]
description = "Rust bindings for the rppal crate to manage GPIO pins on a Raspberry Pi."
license = "MIT"

[dependencies]
pyo3 = { version = "0.22.3", features = ["extension-module", "gil-refs"] }
once_cell = "1.10"  # Add once_cell to manage the singleton
[target.'cfg(target_os = "linux")'.dependencies]
rppal = "0.19"

[lib]
crate-type = ["cdylib"]

